<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">

    <TextView
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/Estado"
        android:textAlignment="center"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/Estado"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/Dispositivos"
        android:layout_width="265dp"
        android:layout_height="257dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Emparejados"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/FondoBoton"
            android:onClick="Emparejados"
            android:text="@string/Emparejados" />

        <ImageButton
            android:id="@+id/Bluetooth"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@color/back"
            android:contentDescription="@string/Bluetooth"
            android:onClick="activarBT"
            android:src="@android:drawable/stat_sys_data_bluetooth"
            android:tint="@color/ColorBT" />

        <Button
            android:id="@+id/Buscar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@color/FondoBoton"
            android:onClick="Buscar"
            android:text="@string/Buscar" />

    </LinearLayout>

    <TextView
        android:id="@+id/MAC"
        android:layout_width="265dp"
        android:layout_height="28dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="15sp" />

    <Button
        android:id="@+id/Vincular"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:background="@color/FondoBoton"
        android:onClick="Vincular"
        android:text="@string/Vincular"
        android:visibility="invisible" />
</LinearLayout>